# project-test

./: Makefile  pyproject.toml
tests/: test_capitalize.py
